# RosWs

./: CMakeLists.txt  README.md  package.xml
include/: bin.h  groundRemove.h  segment.h
src/: bin.cpp  groundRemove.cpp  segment.cpp  test.cpp
